--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,10 +10,7 @@
     "ecmaVersion": "latest"
   },
   "rules": {
-
-    "quotes": 0
-
-    "undefined": 0
-
+    "quotes": 0,
+    "linebreak-style": 0
   }
 }
